@@ -1,0 +1,8 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 3"""
+ date="2016-04-20T17:20:10Z"
+ content="""
+Good point about reinject deleting files that don't verify. I've fixed that
+so it leaves them alone.
+"""]]
